clusters/desktop/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: default
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: default
  hostnames:
  - "jellyfin.nkmrk.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jellyfin
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: default
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: default
  hostnames:
  - "seerr.nkmrk.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: seerr
      port: 80
